<resources>
    <string name="app_name">Team Spirit</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="register">Sign up</string>
    <string name="login">Sign in</string>
    <string name="password">password</string>
    <string name="confirmPassword">confirm password</string>

    <string name="facebook_app_id">700833243645579</string>
    <string name="fb_login_protocol_scheme">fb700833243645579</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
