<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <include android:id="@+id/toolbar" layout="@layout/bar_layuot" />

    <LinearLayout
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_account"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <EditText
            android:layout_width="320dp"
            android:layout_height="45dp"
            android:id="@+id/username"
            android:hint="@string/username"
            android:paddingLeft="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/email"
            android:layout_margin="10dp"/>

        <EditText
            android:layout_width="320dp"
            android:layout_height="45dp"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            app:met_floatingLabel="normal"
            android:hint="@string/email"
            android:paddingLeft="50dp"
            android:background="@drawable/email_address"
            android:layout_margin="10dp"/>

        <EditText
            android:layout_width="320dp"
            android:layout_height="45dp"
            android:id="@+id/password"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:background="@drawable/password"
            android:paddingLeft="50dp"
            android:layout_margin="10dp"/>

        <EditText
            android:layout_width="320dp"
            android:layout_height="45dp"
            android:id="@+id/confirmPassword"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/confirmPassword"
            android:background="@drawable/password"
            android:paddingLeft="50dp"
            android:layout_margin="10dp"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="400dp"
                android:layout_height="110dp"
                android:id="@+id/btn_register"
                android:text="@string/register"
                android:background="@drawable/send_button"
                android:textColor="#fff"
                android:paddingBottom="20dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"/>


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/illustrations"
                android:layout_marginTop="30dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="Have an account?" />
                <Button
                    android:id="@+id/sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="Sign in"
                    android:background="@color/prozory"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"/>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>