<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include android:id="@+id/toolbar" layout="@layout/bar_layuot" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="-13dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/login"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_email_img"
            android:drawableLeft="@drawable/ic_email_img"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            app:met_floatingLabel="normal"
            tools:ignore="RtlSymmetry" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_passwd_img"
            android:drawableLeft="@drawable/ic_passwd_img"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            app:met_floatingLabel="normal"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:text="Login"
            android:textColor="#fff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/googleBtn"
                android:layout_width="180dp"
                android:layout_height="34dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp">
            </com.google.android.gms.common.SignInButton>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebookBtn"
                android:layout_width="180dp"
                android:layout_height="46dp"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="10dp">
            </com.facebook.login.widget.LoginButton>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>